--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,3 +91,11 @@ nav ul li a:hover:before {
 .ul{
   margin-top: 20rem;
 }
+.ck_editer{
+  /* height: 10%; */
+  width: 100%;
+}
+
+.ck_editer1{
+height: 10px;
+}
