--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,7 @@ nav ul li a {
   font-family: 'Poppins',sans-serif;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 16px;
   color: #fff;
   position: relative;
   padding: 15px 0px 15px 25px;
@@ -86,7 +86,7 @@ nav ul li a:hover:before {
 }
 .font_1{
   /* text-transform: uppercase; */
-  font-size: 1.4rem;
+  font-size: 16px;
 }
 .ul{
   margin-top: 20rem;
@@ -98,4 +98,8 @@ nav ul li a:hover:before {
 
 .ck_editer1{
 height: 10px;
+}
+.buttonform{
+  background-color: #00848a;
+  align-items: center;
 }
